Fixed collapsing for all elements in left side on CV

--- a/cv.css
+++ b/cv.css
@@ -87,6 +87,6 @@ a {
     }
 }
 
-#hidden-text {
+.hidden-text {
     display: none;
 }
